<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ContactPage">

   <EditText
       android:id="@+id/name"
       android:layout_width="261dp"
       android:layout_height="50dp"
       android:layout_marginTop="56dp"
       android:hint="@string/please_enter_your_name"
       android:importantForAutofill="no"
       android:inputType="text"
       android:textAlignment="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/phoneNumber"
       android:layout_width="261dp"
       android:layout_height="50dp"
       android:layout_marginTop="32dp"
       android:hint="@string/please_enter_phone_number"
       android:importantForAutofill="no"
       android:inputType="number|phone"
       android:textAlignment="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/name" />

   <EditText
       android:id="@+id/web"
       android:layout_width="261dp"
       android:layout_height="50dp"
       android:layout_marginTop="32dp"
       android:hint="@string/please_enter_web_address"
       android:importantForAutofill="no"
       android:inputType="text"
       android:textAlignment="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

   <EditText
       android:id="@+id/location"
       android:layout_width="261dp"
       android:layout_height="50dp"
       android:layout_marginTop="32dp"
       android:hint="@string/please_enter_your_location"
       android:importantForAutofill="no"
       android:inputType="text"
       android:textAlignment="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/web" />

   <ImageView
       android:id="@+id/yellow"
       android:layout_width="51dp"
       android:layout_height="50dp"
       android:layout_marginStart="40dp"
       android:layout_marginTop="44dp"
       android:clickable="true"
       android:contentDescription="@string/yellowface"
       android:focusable="true"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/location"
       app:srcCompat="@drawable/baseline_insert_emoticon_24"
       tools:ignore="ImageContrastCheck" />

   <ImageView
       android:id="@+id/green"
       android:layout_width="51dp"
       android:layout_height="50dp"
       android:layout_marginStart="80dp"
       android:layout_marginTop="44dp"
       android:clickable="true"
       android:contentDescription="@string/green_happy_face"
       android:focusable="true"
       app:layout_constraintStart_toEndOf="@id/yellow"
       app:layout_constraintTop_toBottomOf="@+id/location"
       app:srcCompat="@drawable/green"
       tools:ignore="ImageContrastCheck" />

   <ImageView
       android:id="@+id/red"
       android:layout_width="51dp"
       android:layout_height="50dp"
       android:layout_marginTop="44dp"
       android:layout_marginEnd="72dp"
       android:clickable="true"
       android:contentDescription="@string/red_sad_face"
       android:focusable="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/location"
       app:srcCompat="@drawable/red" />


</androidx.constraintlayout.widget.ConstraintLayout>