<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDisplay">


    <ImageView
        android:id="@+id/colorImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/face_emoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/calender"
        android:contextClickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:srcCompat="@drawable/baseline_calendar_today_24"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/phone_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorImage"
        app:srcCompat="@drawable/baseline_phone_24"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/location_pin"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:srcCompat="@drawable/baseline_location_on_24" />

    <Button
        android:id="@+id/button"
        android:layout_width="278dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="196dp"
        android:text="@string/create_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>